--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,8 @@ jobs:
         - name: 'Deploy to Azure'
               uses: azure/webapps-deploy@v2
               with:
-                app-name: 'crud-node-api-kojo'
+                app-name: 'crud-api-node-kojo'
+        
         
        - name: logout
               run: |
