change to deployment file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         - name: 'Deploy to Azure'
               uses: azure/webapps-deploy@v2
               with:
-                app-name: 'crud-api-node-kojo'
+                app-name: 'crud-api-node'
         
         
        - name: logout
