--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,38 @@
-## SNIPPET: ___e3t2.actions.deploy ##
-
 on: [push]
 
 name: Deploy CRUD API to Azure
 
-## SNIPPET: ___e3t3.actions.deploy ##
-
 jobs:
-    build-and-deploy:
-      runs-on: ubuntu-latest
-      steps: 
-        - name: 'Checkout GitHub Action'
-          uses: actions/checkout@master
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: 'Checkout GitHub Action' 
+      uses: actions/checkout@master
     
-        - name: 'Login to Azure'
-          uses: azure/login@v1
-          with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: 'Login to Azure'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-        - name: Setup Node 10.x
-          uses: actions/setup-node@v1
-          with:
-            node-version: '12.x'
+    - name: Setup Node 12.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
 
-        - name: 'npm install, build, and test'
-          run: |
-              npm install
-              npm run build --if-present
-              npm run test --if-present
+    - name: 'npm install, build, and test'
+      env:
+        MONGO_DB_CONNECTION_STRING: ${{ secrets.MONGO_DB_CONNECTION_STRING }}
+        MONGO_DB_DATABASE_NAME: ${{ secrets.MONGO_DB_DATABASE_NAME }}
+      run: |
+        npm install
+        npm run build --if-present
+        npm run test --if-present
 
-        - name: 'Deploy to Azure'
-              uses: azure/webapps-deploy@v2
-              with:
-                app-name: 'crud-api-node'
-        
-        
-       - name: logout
-              run: |
-              az logout
+    - name: 'Deploy to Azure'
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'crud-api-node-kojo'
+
+    - name: logout
+      run: |
+        az logout
